--- a/packages/web/src/scss/components/Accordion/_theme.scss
+++ b/packages/web/src/scss/components/Accordion/_theme.scss
@@ -1,8 +1,14 @@
 @use '@tokens' as tokens;
 
-$accordion-spacer: tokens.$space-500;
-$accordion-item-hover-color: tokens.$background-interactive-hover;
-$accordion-item-active-color: tokens.$background-interactive-active;
-$accordion-header-font-size: tokens.$space-600;
+$accordion-item-color-hover: tokens.$background-interactive-hover;
+$accordion-item-color-active: tokens.$background-interactive-active;
+$accordion-header-typography: tokens.$body-medium-text-regular;
+$accordion-header-typography-active: tokens.$body-medium-text-bold;
+$accordion-header-gap: tokens.$space-500;
+$accordion-header-padding-y: tokens.$space-700;
+$accordion-header-padding-x: tokens.$space-500;
 $accordion-border-radius: tokens.$radius-100;
 $accordion-divider-color: tokens.$border-primary-default;
+$accordion-divider-width: tokens.$border-width-100;
+$accordion-divider-style: tokens.$border-style-100;
+$accordion-content-bottom-offset: tokens.$space-500;
